# preservation-forward-by-komplex

./: LICENSE  README.md  build_release64.bat
documentation/: forward-feta-finalization-roadmap.md  forward-global-script-timeline.md  forward-portability-study-v2-from-decompiled-source.md  forward-porting-effort-and-challenges.md  forward-saari-finalization-roadmap.md  forward-uppol-port-roadmap.md  forward-watercube-port-roadmap.md
original/forward/: file_id.diz  version.txt
port/: CMakeLists.txt  README.md
port/src/: main.cpp
port/src/core/: Camera.h  GifIndexed.cpp  GifIndexed.h  Image32.cpp  Image32.h  IndexedSurface8.cpp  IndexedSurface8.h  LegacyPacked10.cpp  LegacyPacked10.h  Mesh.cpp  Mesh.h  MeshLoaderIgu.cpp  MeshLoaderIgu.h  Renderer3D.cpp  Renderer3D.h  Surface32.cpp  Surface32.h  Timeline.cpp  Timeline.h  Vec2.h  Vec3.h  Vertex.h  XmPlayer.cpp  XmPlayer.h
reverse/logs/: cfr_single_status.tsv  decompilation-summary.md
